# CQL-sepsis

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
configs/: bc_baseline.yaml  cql_alpha_sweep.yaml  cql_default.yaml  experiment_grid.yaml
figures/: results_table.tex
notebooks/: 01_environment_exploration.ipynb  02_baseline_comparison.ipynb  02_comprehensive_evaluation.ipynb  02_data_collection.ipynb  03_cql_training.ipynb  03_results_analysis.ipynb  04_alpha_sweep.ipynb  05_baseline_comparison.ipynb  06_results_analysis.ipynb
results/bc_seed_123/: bc_best.pt  bc_final.pt
results/bc_seed_42/: bc_best.pt  bc_final.pt
results/bc_seed_456/: bc_best.pt  bc_final.pt
results/cql_alpha_0.1_seed_123/: config.yaml
results/cql_alpha_0.1_seed_123/logs/cql_alpha_0.1_seed_123/: events.out.tfevents.1765842319.anishlaptop.3100.0  events.out.tfevents.1765895911.anishlaptop.2480.0
results/cql_alpha_0.1_seed_42/: config.yaml
results/cql_alpha_0.1_seed_42/logs/cql_alpha_0.1_seed_42/: events.out.tfevents.1765840775.anishlaptop.28820.0  events.out.tfevents.1765895280.anishlaptop.12800.0
results/cql_alpha_0.1_seed_456/: config.yaml
results/cql_alpha_0.1_seed_456/logs/cql_alpha_0.1_seed_456/: events.out.tfevents.1765842898.anishlaptop.29084.0  events.out.tfevents.1765896543.anishlaptop.6520.0
results/cql_alpha_0.5_seed_123/: config.yaml
results/cql_alpha_0.5_seed_123/logs/cql_alpha_0.5_seed_123/: events.out.tfevents.1765844035.anishlaptop.32920.0  events.out.tfevents.1765897831.anishlaptop.26748.0
results/cql_alpha_0.5_seed_42/: config.yaml
results/cql_alpha_0.5_seed_42/logs/cql_alpha_0.5_seed_42/: events.out.tfevents.1765843470.anishlaptop.31388.0  events.out.tfevents.1765897184.anishlaptop.33104.0
results/cql_alpha_0.5_seed_456/: config.yaml
results/cql_alpha_0.5_seed_456/logs/cql_alpha_0.5_seed_456/: events.out.tfevents.1765844641.anishlaptop.10500.0  events.out.tfevents.1765898508.anishlaptop.32764.0
results/cql_alpha_0_seed_123/: config.yaml
results/cql_alpha_0_seed_123/logs/cql_alpha_0.0_seed_123/: events.out.tfevents.1765838250.anishlaptop.30324.0  (+1 more)
results/cql_alpha_0_seed_42/: config.yaml
results/cql_alpha_0_seed_456/: config.yaml
results/cql_alpha_10_seed_123/: config.yaml
results/cql_alpha_10_seed_42/: config.yaml
results/cql_alpha_10_seed_456/: config.yaml
results/cql_alpha_1_seed_123/: config.yaml
results/cql_alpha_1_seed_42/: config.yaml
results/cql_alpha_1_seed_456/: config.yaml
results/cql_alpha_2_seed_123/: config.yaml
results/cql_alpha_2_seed_42/: config.yaml
results/cql_alpha_2_seed_456/: config.yaml
results/cql_alpha_5_seed_123/: config.yaml
results/cql_alpha_5_seed_42/: config.yaml
results/cql_alpha_5_seed_456/: config.yaml
scripts/: 01_install_environment.py  02_collect_offline_data.py  03_train_cql.py  04_train_baselines.py  05_evaluate_policies.py  06_generate_figures.py  reproduce_all.ps1  reproduce_all.sh
src/: __init__.py
src/algorithms/: __init__.py  bc.py  cql.py  dqn.py
src/data/: __init__.py  data_collection.py  replay_buffer.py
src/environments/: __init__.py  icu_sepsis_wrapper.py
src/utils/: __init__.py  evaluation.py  logging.py  plotting.py
tests/: __init__.py  conftest.py  test_cql.py  test_environment.py  test_evaluation.py  test_replay_buffer.py
(+28 files in other folders)
