[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cql-sepsis"
version = "0.1.0"
description = "Conservative Q-Learning for Sepsis Treatment in the ICU"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Anish Mariathasan", email = "anish.mariathasan@imperial.ac.uk"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    "reinforcement-learning",
    "offline-rl",
    "conservative-q-learning",
    "sepsis",
    "healthcare",
    "icu",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "gymnasium>=0.28.0",
    "icu-sepsis>=1.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "pandas>=1.4.0",
    "tqdm>=4.64.0",
    "scipy>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
logging = [
    "wandb>=0.15.0",
    "tensorboard>=2.12.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
all = [
    "cql-sepsis[dev,logging,notebooks]",
]

[project.urls]
Homepage = "https://github.com/username/CQL-sepsis"
Documentation = "https://github.com/username/CQL-sepsis#readme"
Repository = "https://github.com/username/CQL-sepsis.git"
Issues = "https://github.com/username/CQL-sepsis/issues"

[project.scripts]
cql-train = "scripts.03_train_cql:main"
cql-evaluate = "scripts.05_evaluate_policies:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "gpu: marks tests that require GPU",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | data
    | results
    | figures
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
skip = [".git", "data", "results", "figures"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "data/",
    "results/",
    "figures/",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "scripts/*",
    "notebooks/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
